# quickpromise

./: CMakeLists.txt  QuickPromiseConfig.cmake.in
